# llm-eval-notes

./: .gitignore  EVALS.md  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
experiments/2025-02-18/: summary.md
src/llm_eval/: __init__.py  cli.py
src/llm_eval/evals/: __init__.py  brittleness.py  comparison.py  cost_tracking.py  hallucination.py  reasoning.py  safety.py  streaming.py  structured.py  tool_use.py
src/llm_eval/providers/: __init__.py  anthropic.py  base.py  openai.py
src/llm_eval_notes/: __init__.py
tests/: test_brittleness.py  test_comparison.py  test_cost_tracking.py  test_hallucination.py  test_providers.py  test_reasoning.py  test_safety.py  test_streaming.py  test_structured.py  test_tool_use.py
